Add native access flag, improve shader and registry logging with Log4j